[metadata]
name = brewsearch-Thamognya
version = 0.0.1
author = Thamognya Kodi
author_email = contact@thamognya.com
description = A brew formulae search cli application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.thamognya.com/Thamognya/brew-formulae-search
project_urls =
    Bug Tracker = https://github.com/Thamognya/brew-formulae-search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: AGPL-3.0-or-later License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
